上传于 2022年01月23日 10:26

--- a/public/index.html
+++ b/public/index.html
@@ -372,6 +372,7 @@ https://github.com/alex-shpak/hugo-book
   Andlua book
   <a class="anchor" href="#andlua-book">#</a>
 </h1>
+<p><img src="https://count.getloli.com/get/@sudoskys-github-aluabook?theme=moebooru" alt="counter" /></p>
 <h2 id="导入语">
   导入语
   <a class="anchor" href="#%e5%af%bc%e5%85%a5%e8%af%ad">#</a>
