上传于 2022年01月23日 12:33

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Andlua book #  导入语 #  本文档的目的旨在为 Androlua 社区提供支持，也欢迎各位补充本文档    本文档签名 ...     贡献本项目 #  本项目由sudoskys使用hugo发布，如果您想补充本文档，请前往sudoskys
+贡献教程 教程二 全面教程
  Contribute  引用 #   代码版权问题 ...  本文档使用的代码来自于经验所知，取材自群内开源与MLUA手册。 如果有版权问题，请联系 sudoskys     内容参考详注 ...     摘取部分 URL 作者     常见命名规范 四种基本的编程命名规范 f-zyj       ">
 <meta name="theme-color" content="#FFFFFF">
 <meta name="color-scheme" content="light dark"><meta property="og:title" content="Introduction" />
@@ -430,6 +431,9 @@ https://github.com/alex-shpak/hugo-book
   <a class="anchor" href="#%e8%b4%a1%e7%8c%ae%e6%9c%ac%e9%a1%b9%e7%9b%ae">#</a>
 </h3>
 <p>本项目由sudoskys使用hugo发布，如果您想补充本文档，请前往<a href="https://github.com/sudoskys/aluabook">sudoskys</a></p>
+<p><a href="https://www.jianshu.com/p/8c69d1021d98">贡献教程</a>
+<a href="https://blog.csdn.net/yzr1216/article/details/81114560">教程二</a>
+<a href="https://www.cnblogs.com/idorax/p/9366035.html">全面教程</a></p>
 <hr>
 
 
