上传于 2022年01月25日 22:28

--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.82c5dbd23447cee0b4c2aa3ed08ce0961faa40e1fa370eee4f8c9f02e0d46b5f.css" integrity="sha256-gsXb0jRHzuC0wqo&#43;0Izglh&#43;qQOH6Nw7uT4yfAuDUa18=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.19f0aa7b87b2d9ae79dfe093579dcdbd49ed1ddf983aa8aa5e06b29d5be4097f.js" integrity="sha256-GfCqe4ey2a553&#43;CTV53NvUntHd&#43;YOqiqXgaynVvkCX8=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.aa2d4ffba4161d47711f7fcde8168f00dd821939854c5cff08b19dd3af582b61.js" integrity="sha256-qi1P&#43;6QWHUdxH3/N6BaPAN2CGTmFTFz/CLGd069YK2E=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
