--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.82c5dbd23447cee0b4c2aa3ed08ce0961faa40e1fa370eee4f8c9f02e0d46b5f.css" integrity="sha256-gsXb0jRHzuC0wqo&#43;0Izglh&#43;qQOH6Nw7uT4yfAuDUa18=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.6d7dd1b236a5f6ea6dee698820867d2f60712920698d86f17647d4049495c976.js" integrity="sha256-bX3Rsjal9upt7mmIIIZ9L2BxKSBpjYbxdkfUBJSVyXY=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.f67de268ab2c9ce6bec4a353ee553695783cb0051c77725570178aa876bc823d.js" integrity="sha256-9n3iaKssnOa&#43;xKNT7lU2lXg8sAUcd3JVcBeKqHa8gj0=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
