--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.82c5dbd23447cee0b4c2aa3ed08ce0961faa40e1fa370eee4f8c9f02e0d46b5f.css" integrity="sha256-gsXb0jRHzuC0wqo&#43;0Izglh&#43;qQOH6Nw7uT4yfAuDUa18=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.bc05aa9d95c2283f739a9fa7e4f9011b3b50ea896127231507572637b7d14fee.js" integrity="sha256-vAWqnZXCKD9zmp&#43;n5PkBGztQ6olhJyMVB1cmN7fRT&#43;4=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.9bffb06d346b83e490de16366fa1f153e74045bb0029722fc412ab9305be02a5.js" integrity="sha256-m/&#43;wbTRrg&#43;SQ3hY2b6HxU&#43;dARbsAKXIvxBKrkwW&#43;AqU=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
