上传于 2022年02月04日 17:37

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.82c5dbd23447cee0b4c2aa3ed08ce0961faa40e1fa370eee4f8c9f02e0d46b5f.css" integrity="sha256-gsXb0jRHzuC0wqo&#43;0Izglh&#43;qQOH6Nw7uT4yfAuDUa18=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.eb46db7c33d5ad170a78fa9a486456de256f1e0ae9caaf79a3ed656005daadf6.js" integrity="sha256-60bbfDPVrRcKePqaSGRW3iVvHgrpyq95o&#43;1lYAXarfY=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.8c69a98a246c3707add70ffec417b37028d28ecf61cc3af3de35ce77ddaac5db.js" integrity="sha256-jGmpiiRsNwet1w/&#43;xBezcCjSjs9hzDrz3jXOd92qxds=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://lua.dianas.cyou/index.xml" title="LUA book" />
 <!--
 Made with Book Theme
